# cargo-post

./: Cargo.toml  Changelog.md  Readme.md
.github/workflows/: build.yml
src/: help.txt  main.rs  post_build_script_manifest.toml
tests/: Cargo.toml
tests/cargo_build_target/: Cargo.toml  post_build.rs
tests/cargo_config/: Cargo.toml  post_build.rs
tests/dependency/: Cargo.toml  post_build.rs
tests/simple/: Cargo.toml  post_build.rs
tests/simple_run/: Cargo.toml  post_build.rs
tests/simple_run/src/: main.rs
