[package]
name = "cargo-post"
version = "0.1.2"
authors = ["Philipp Oppermann <dev@phil-opp.com>"]
edition = "2018"
readme = "Readme.md"
description = "A `cargo` wrapper that executes a post build script after a successful build."
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/crate/cargo-post/"
repository = "https://github.com/phil-opp/cargo-post"

[dependencies]
toml = "0.5.0"

[dependencies.cargo_metadata]
version = "0.7.3"
default-features = false